# python-project-lvl1

./: .gitignore  README.md  makefile  pyproject.toml
brain_games/: cli.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_even.py  brain_games.py
