[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project"
authors = ["Cain Entropax Maxwell <cainmax@posteo.mx>"]
license = "MIT"
packages = [
    { include = "brain_games" }
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.even:main"
brain-calc = "brain_games.games.calc:main"
brain-gcd = "brain_games.games.gcd:main"
brain-progression = "brain_games.games.progression:main"
brain-prime = "brain_games.games.prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
